[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "tech_analysis"
version = "0.0.1"
authors = [
  { name="Bimal Kumar Shah", email="shah.bimal005@gmail.com },
]
description = "Pure Python technical analysis package"
readme = "README.md"
requires-python = ">=3.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/bimalkshah/technicalanalysis"
Issues = "https://github.com/bimalkshah/technicalanalysis"
